Fixed the Popup animations due the the flickering scrollbar, also removed curstom scrollbar from the body/html.

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,24 +12,28 @@ html {
 
     font-family: HelveticaNowText, Helvetica, Arial, sans-serif;
 
-    &::-webkit-scrollbar {
-        width: 8px;
-        border-radius: 8rem;
-    }
+    // &::-webkit-scrollbar {
+    //     width: 8px;
+    // }
 
-    &::-webkit-scrollbar-track {
-        background-color: #fff;
-    }
+    // &::-webkit-scrollbar-track {
+    //     background-color: #fff;
+    // }
 
-    &::-webkit-scrollbar-thumb {
-        background-color: RGBA(var(--color-blue-special));
-        box-shadow: inset 0 0 6px RGBA(0, 0, 0, 0.5);
-        border-radius: 8rem;
-    }
+    // &::-webkit-scrollbar-thumb {
+    //     background-color: var(--accents-5);
+    //     /* box-shadow: inset 0 0 6px RGBA(0, 0, 0, 0.5); */
+    //     border-radius: 14x;
+    // }
 
-    &::-webkit-scrollbar-thumb:window-inactive {
-        background-color: RGBA(var(--color-blue-special));
-    }
+    // &::-webkit-scrollbar-thumb:window-inactive {
+    //     background-color: var(--accents-5);
+    // }
+
+    // .scroller {
+    //     overflow-y: scroll;
+    //     scrollbar-color: var(--accents-5) var(--accents-6);
+    // }
 }
 
 body {
